--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,7 +32,7 @@ body {
     margin:15px;
     padding: 0;
     display: flex;
-    float: right;
+    justify-content: flex-end;
 }
 
 .horizontal-list li{
