--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 * {
     box-sizing: border-box;
-    padding: 20;
     margin: 0;
+    padding: 0;
 }
 
 body {
@@ -15,10 +15,11 @@ body {
     background-color: #2a607c;
     color: #ffffff;
     display: flex;
-    justify-content: space-between
+    justify-content: space-between;
 }
 
 .header h1 {
+    margin-right: 0;
     font-size: 48px;
     margin: 0;
 }
@@ -32,7 +33,8 @@ body {
     margin:15px;
     padding: 0;
     display: flex;
-    justify-content: flex-end;
+    align-items: flex-end;
+    row-gap: 1px;
 }
 
 .horizontal-list li{
